--- a/build.gradle
+++ b/build.gradle
@@ -15,6 +15,7 @@ repositories {
 dependencies {
 	testCompile "org.spockframework:spock-core:1.3-groovy-2.5"
 	testCompile "org.testcontainers:selenium:1.12.3"
+	testCompile group: 'com.athaydes', name: 'spock-reports', version: '1.6.2'
 	compile group: 'ru.stqa.selenium', name: 'webdriver-expected-conditions', version: '1.0.52'
 	compile "org.codehaus.groovy:groovy-all:2.5.7"
 	implementation 'org.springframework.boot:spring-boot-starter'
